force-app/main/default/objects/Campaign/fields/Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Costs__c</fullName>
    <label>Actual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>