force-app/main/default/objects/Campaign/fields/Actual_number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Actual_number_of_Participants__c</fullName>
    <label>Actual number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>