force-app/main/default/objects/Campaign/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor/Dealer</fullName>
            </value>
            <value>
                <fullName>Large Farmer</fullName>
            </value>
            <value>
                <fullName>Medium Farmer</fullName>
            </value>
            <value>
                <fullName>Small Farmer</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Cooperatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>