force-app/main/default/objects/Campaign/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <inlineHelpText>MX: MXN
AR: USD</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>