force-app/main/default/objects/Campaign/fields/Campaign_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Product_Count__c</fullName>
    <label>Campaign Product Count</label>
    <summaryForeignKey>Campaign_Product__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>