force-app/main/default/objects/Campaign/fields/Campaing_Duration__c.field-meta.xml
<CustomField>
    <fullName>Campaing_Duration__c</fullName>
    <label>Campaing Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>