force-app/main/default/objects/Campaign/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipLabel>Campaigns (City)</relationshipLabel>
    <relationshipName>Campaigns_City</relationshipName>
    <type>Lookup</type>
</CustomField>