force-app/main/default/objects/Campaign/fields/Co_branding_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Co_branding_Sponsorship__c</fullName>
    <label>Co-branding/Sponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>