force-app/main/default/objects/Campaign/fields/Competitor_Info__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Info__c</fullName>
    <label>Competitor Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>