force-app/main/default/objects/Campaign/fields/Crop_Problematic__c.field-meta.xml
<CustomField>
    <fullName>Crop_Problematic__c</fullName>
    <label>Crop Problematic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barley</fullName>
            </value>
            <value>
                <fullName>Beans</fullName>
            </value>
            <value>
                <fullName>Canola</fullName>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Sorghum</fullName>
            </value>
            <value>
                <fullName>Soybean</fullName>
            </value>
            <value>
                <fullName>Sunflower</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Agave</fullName>
            </value>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Avocado</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Palm</fullName>
            </value>
            <value>
                <fullName>Pastures</fullName>
            </value>
            <value>
                <fullName>Sugarcane</fullName>
            </value>
            <value>
                <fullName>Berries</fullName>
            </value>
            <value>
                <fullName>Brassicas</fullName>
            </value>
            <value>
                <fullName>Cucurbits</fullName>
            </value>
            <value>
                <fullName>Potatoes</fullName>
            </value>
            <value>
                <fullName>Tomato &amp; Pepper</fullName>
            </value>
            <value>
                <fullName>Turf &amp; Ornamentals</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>