force-app/main/default/objects/Campaign/fields/Crop_Solution__c.field-meta.xml
<CustomField>
    <fullName>Crop_Solution__c</fullName>
    <label>Crop Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Avocado</fullName>
            </value>
            <value>
                <fullName>Sugarcane</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Potato</fullName>
            </value>
            <value>
                <fullName>Tomatoe &amp; pepper</fullName>
            </value>
            <value>
                <fullName>Berries</fullName>
            </value>
            <value>
                <fullName>Agave</fullName>
            </value>
            <value>
                <fullName>Pineapple</fullName>
            </value>
            <value>
                <fullName>Brasicas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>