force-app/main/default/objects/Campaign/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>IF(AND(MONTH(Date__c) = MONTH(TODAY()) ,YEAR(Date__c )=YEAR(TODAY())),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>