force-app/main/default/objects/Campaign/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>IF(AND(YEAR(Date__c )=YEAR(TODAY())),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <type>Checkbox</type>
</CustomField>