force-app/main/default/objects/Campaign/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>