force-app/main/default/objects/Campaign/fields/Customer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Search/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>