force-app/main/default/objects/Campaign/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>