force-app/main/default/objects/Campaign/fields/Date_of_the_event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_event__c</fullName>
    <label>Date of the event</label>
    <type>Date</type>
</CustomField>