force-app/main/default/objects/Campaign/fields/Detail_Plan__c.field-meta.xml
<CustomField>
    <fullName>Detail_Plan__c</fullName>
    <label>Detail Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>