force-app/main/default/objects/Campaign/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Channel</valueSetName>
    </valueSet>
</CustomField>