force-app/main/default/objects/Campaign/fields/EDD_Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>EDD_Estimated_Delivery_Date__c</fullName>
    <label>EDD Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>