force-app/main/default/objects/Campaign/fields/Estimated_Participants__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Participants__c</fullName>
    <label>Estimated Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>