force-app/main/default/objects/Campaign/fields/Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Frecuency__c</fullName>
    <label>Frecuency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>