force-app/main/default/objects/Campaign/fields/Geographics_Area__c.field-meta.xml
<CustomField>
    <fullName>Geographics_Area__c</fullName>
    <label>Geographics Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>