force-app/main/default/objects/Campaign/fields/Is_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval__c</fullName>
    <formula>IF( 0   &gt;Monthly_Budget__r.Residual_Amount__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approval</label>
    <type>Checkbox</type>
</CustomField>