force-app/main/default/objects/Campaign/fields/Is_MKT_Approvel__c.field-meta.xml
<CustomField>
    <fullName>Is_MKT_Approvel__c</fullName>
    <formula>IF(Actual_Costs__c&gt;Budget__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is MKT Approvel</label>
    <type>Checkbox</type>
</CustomField>