force-app/main/default/objects/Campaign/fields/Is_MKT_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_MKT_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MKT Manager</label>
    <type>Checkbox</type>
</CustomField>