force-app/main/default/objects/Campaign/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Budget</label>
    <referenceTo>Monthly_Budget__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>