force-app/main/default/objects/Campaign/fields/New_Customers_Generated__c.field-meta.xml
<CustomField>
    <fullName>New_Customers_Generated__c</fullName>
    <label>New Customers Generated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>