force-app/main/default/objects/Campaign/fields/Notice_Supplementary_Product__c.field-meta.xml
<CustomField>
    <fullName>Notice_Supplementary_Product__c</fullName>
    <formula>AND(TEXT(Related_Product_Level__c)==&apos;Single Product&apos;,Campaign_Product_Count__c==0)</formula>
    <label>Notice Supplementary Product</label>
    <type>Checkbox</type>
</CustomField>