force-app/main/default/objects/Campaign/fields/Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount__c</fullName>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>