force-app/main/default/objects/Campaign/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner.FirstName+&apos; &apos;+Owner.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>