force-app/main/default/objects/Campaign/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HERBICIDES</fullName>
            </value>
            <value>
                <fullName>INSECTICIDES</fullName>
            </value>
            <value>
                <fullName>FUNGICIDES</fullName>
            </value>
            <value>
                <fullName>BIOLOGICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>