force-app/main/default/objects/Campaign/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>