force-app/main/default/objects/Campaign/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>