force-app/main/default/objects/Campaign/fields/Quality_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Participants__c</fullName>
    <label>Quality Of Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Ordinary</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Very Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>