force-app/main/default/objects/Campaign/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>