force-app/main/default/objects/Campaign/fields/Related_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Level__c</fullName>
    <label>Related Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Line</fullName>
            </value>
            <value>
                <fullName>Crop Solution</fullName>
            </value>
            <value>
                <fullName>Single Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>