force-app/main/default/objects/Campaign/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Sample (small scale, one-off validation)</fullName>
            </value>
            <value>
                <fullName>Trade Sample (strong sign of purchase interest)</fullName>
            </value>
            <value>
                <fullName>Demo Sample (for large producers/distributors)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>