force-app/main/default/objects/Campaign/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <length>255</length>
    <type>Text</type>
</CustomField>