force-app/main/default/objects/Campaign/fields/Segment_1__c.field-meta.xml
<CustomField>
    <fullName>Segment_1__c</fullName>
    <label>Segment 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fungicide</fullName>
            </value>
            <value>
                <fullName>Growth Regulator</fullName>
            </value>
            <value>
                <fullName>Selective Herbicide</fullName>
            </value>
            <value>
                <fullName>Non  Selective Herbicide</fullName>
            </value>
            <value>
                <fullName>Seed Treatment</fullName>
            </value>
            <value>
                <fullName>Insecticide</fullName>
            </value>
            <value>
                <fullName>Nematicide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>