force-app/main/default/objects/Campaign/fields/Segment_2__c.field-meta.xml
<CustomField>
    <fullName>Segment_2__c</fullName>
    <label>Segment 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternaria</fullName>
            </value>
            <value>
                <fullName>Anthracnose, early blight</fullName>
            </value>
            <value>
                <fullName>Black sigatoka</fullName>
            </value>
            <value>
                <fullName>Blight</fullName>
            </value>
            <value>
                <fullName>Botrytis</fullName>
            </value>
            <value>
                <fullName>Damping off</fullName>
            </value>
            <value>
                <fullName>End of Cycle Diseases</fullName>
            </value>
            <value>
                <fullName>Fusarium</fullName>
            </value>
            <value>
                <fullName>Mildiu/Late Blight</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>powdery mildew</fullName>
            </value>
            <value>
                <fullName>Rhizhocthonia</fullName>
            </value>
            <value>
                <fullName>Rust</fullName>
            </value>
            <value>
                <fullName>Sclerotinia</fullName>
            </value>
            <value>
                <fullName>Spongospora</fullName>
            </value>
            <value>
                <fullName>Growth regulator</fullName>
            </value>
            <value>
                <fullName>Broad Leaves Post-emergent</fullName>
            </value>
            <value>
                <fullName>Broad Leaves Pre-emergent</fullName>
            </value>
            <value>
                <fullName>Grass Post-emergent</fullName>
            </value>
            <value>
                <fullName>Grass Pre-emergent</fullName>
            </value>
            <value>
                <fullName>Burndown</fullName>
            </value>
            <value>
                <fullName>Chemical Fallow</fullName>
            </value>
            <value>
                <fullName>Post-emergent</fullName>
            </value>
            <value>
                <fullName>Pre-emergent</fullName>
            </value>
            <value>
                <fullName>Seed Fungicide</fullName>
            </value>
            <value>
                <fullName>Seeds Insecticide</fullName>
            </value>
            <value>
                <fullName>Seeds Other</fullName>
            </value>
            <value>
                <fullName>Acaricide</fullName>
            </value>
            <value>
                <fullName>Bugs/Sucking</fullName>
            </value>
            <value>
                <fullName>Chewing/sucking pest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>