force-app/main/default/objects/Campaign/fields/Social_Meida_Channel__c.field-meta.xml
<CustomField>
    <fullName>Social_Meida_Channel__c</fullName>
    <label>Social Meida Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Google Adwords</fullName>
            </value>
            <value>
                <fullName>Tic Toc</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>