force-app/main/default/objects/Campaign/fields/Target_Audience_Interestes__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Interestes__c</fullName>
    <label>Target Audience Interestes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>