force-app/main/default/objects/Campaign/fields/Target_Audiences_Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Target_Audiences_Age_Range__c</fullName>
    <label>Target Audiences Age Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>