force-app/main/default/objects/Campaign/fields/Target_Audiences_Gender__c.field-meta.xml
<CustomField>
    <fullName>Target_Audiences_Gender__c</fullName>
    <label>Target Audiences Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>