force-app/main/default/objects/Campaign/fields/Target_Potential_Audiences__c.field-meta.xml
<CustomField>
    <fullName>Target_Potential_Audiences__c</fullName>
    <label>Target Potential Audiences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>