force-app/main/default/objects/Campaign/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns_User_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>