force-app/main/default/objects/Campaign/fields/Vertify_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vertify_Actual_Cost__c</fullName>
    <formula>AND(ISBLANK(Actual_Costs__c))</formula>
    <label>Vertify Actual Cost</label>
    <type>Checkbox</type>
</CustomField>