force-app/main/default/objects/Campaign/fields/Whether_Generated_Orders__c.field-meta.xml
<CustomField>
    <fullName>Whether_Generated_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whether Generated Orders</label>
    <type>Checkbox</type>
</CustomField>