force-app/main/default/objects/Campaign/recordTypes/Field_Demo.recordType-meta.xml
<RecordType>
    <fullName>Field_Demo</fullName>
    <active>true</active>
    <label>Field Demo</label>
</RecordType>