force-app/main/default/objects/Campaign/recordTypes/Offline_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Offline_Campaign</fullName>
    <active>true</active>
    <label>Offline Campaign</label>
</RecordType>