force-app/main/default/objects/Campaign/recordTypes/Sample.recordType-meta.xml
<RecordType>
    <fullName>Sample</fullName>
    <active>true</active>
    <label>Sample</label>
</RecordType>