force-app/main/default/objects/Campaign/validationRules/Validate_Actual_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Actual_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(MKT_Approval__c)==&apos;Approved&apos;,Budget__c!=Actual_Costs__c,ISCHANGED(Budget__c))</errorConditionFormula>
    <errorDisplayField>Budget__c</errorDisplayField>
    <errorMessage>Please adjust the budget to be equal to the acutal cost.</errorMessage>
</ValidationRule>