force-app/main/default/objects/Campaign/validationRules/Validate_Crop_Solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Crop_Solution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Related_Product_Level__c)==&apos;Crop Solution&apos; ,ISBLANK(TEXT(Crop_Solution__c)))</errorConditionFormula>
    <errorDisplayField>Crop_Solution__c</errorDisplayField>
    <errorMessage>Crop Solution Required</errorMessage>
</ValidationRule>