force-app/main/default/objects/Campaign/validationRules/Validate_Currency_AR.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Currency_AR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Sales_Org__c==&apos;5130&apos;,Sales_Org__c==&apos;5070&apos;),TEXT(Currency__c) != &apos;ARS&apos;,TEXT(Currency__c) != &apos;USD&apos;)</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>Please select ARS or USD</errorMessage>
</ValidationRule>