force-app/main/default/objects/Campaign/validationRules/Validate_Currency_MX.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Currency_MX</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Sales_Org__c==&apos;3010&apos;,Sales_Org__c==&apos;3020&apos;),TEXT(Currency__c) != &apos;MXN&apos;,TEXT(Currency__c) != &apos;USD&apos;)</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>Please select MXN or USD</errorMessage>
</ValidationRule>