force-app/main/default/objects/Campaign/validationRules/Validate_Order_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Order_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Whether_Generated_Orders__c,ISBLANK(Order_Amount__c))</errorConditionFormula>
    <errorDisplayField>Order_Amount__c</errorDisplayField>
    <errorMessage>Order Amount Required</errorMessage>
</ValidationRule>