force-app/main/default/objects/Campaign/validationRules/Validate_Product_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Product_Line</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Related_Product_Level__c)==&apos;Product Line&apos;,ISBLANK(TEXT(Product_Line__c)))</errorConditionFormula>
    <errorDisplayField>Product_Line__c</errorDisplayField>
    <errorMessage>Product Line Required</errorMessage>
</ValidationRule>