force-app/main/default/objects/Campaign/listViews/AR_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>AR_Agroterrum_C</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Date__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Budget__c</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>5130</value>
    </filters>
    <label>AR Agroterrum C</label>
    <sharedTo>
        <group>X5030</group>
    </sharedTo>
</ListView>